--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -56,7 +56,7 @@
   --muted-foreground: #94a3b8;
   /* Slate 400 */
 
-  --color-primary-dark: #6bd469;
+  --color-primary-dark: #0ABAB5;
   /* Lighter Green for Dark Mode */
 
   /* Glass Variables Dark */
